Fixed PartControllerE2ETest (1 test):  - Needed to not turn the mapped iterator into an non-mutable list Added default list initializations for all entities
Signed-off-by: Ioannis Panagi <llelga8@gmail.com>