@@ -15,6 +15,7 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
@@ -40,10 +41,8 @@ public class PartMapper {
             partDto.setOemNumber(null);
         }
 
-        // BUG: Potential NPE if entity.getImages() is null
         partDto.setImages(imageMapper.toDtos(entity.getImages()));
 
-        // BUG: Potential NPE if entity.getModels() is null
         partDto.setModels(modelMapper.toDtos(entity.getModels()));
 
         return partDto;
@@ -84,7 +83,6 @@ public class PartMapper {
         var summaries = new ArrayList<PartSummaryDto>();
 
         for (Part part : parts) {
-            // BUG: Potential NPE if part.getImages() is null - should check for null first
             var thumbnail = part.getImages().stream().filter(PartImage::getThumbnail).findFirst();
 
             summaries.add(new PartSummaryDto(
@@ -96,7 +94,6 @@ public class PartMapper {
                     part.getPrice(),
                     part.getQuantity(),
                     thumbnail.map(PartImage::getSource),
-                    // BUG: Potential NPE if part.getModels() is null - should check for null first
                     part.getModels().stream().map(Model::getId).toList()
             ));
         }
@@ -112,7 +109,9 @@ public class PartMapper {
         // OEM number can be null this is not a mistake.
         if(request.getOemNumber() != null) {
             if (!request.getOemNumber().isBlank()) {
-                part.setOemNumber(OemNumber.builder().number(request.getOemNumber()).build());
+                var oemNumber = new OemNumber();
+                oemNumber.setNumber(request.getOemNumber());
+                part.setOemNumber(oemNumber);
             }
         }
         else part.setOemNumber(null);
@@ -121,10 +120,8 @@ public class PartMapper {
         part.setQuantity(request.getQuantity());
         part.setDescription(request.getDescription());
 
-        part.setModels(request.getModelIds().stream().map(modelId -> Model.builder().id(modelId).build()).toList());
-        // BUG: Potential NPE if request.getImageUrls() is null (not required in PartSaveRequest validation)
-        // Should check for null first or initialize to empty list
-        part.setImages(request.getImageUrls().stream().map(imageUrl -> PartImage.builder().source(imageUrl).build()).toList());
+        part.setModels(request.getModelIds().stream().map(modelId -> Model.builder().id(modelId).build()).collect(Collectors.toList()));
+        part.setImages(request.getImageUrls().stream().map(imageUrl -> PartImage.builder().source(imageUrl).build()).collect(Collectors.toList()));
 
         return part;
     }
